Atualização da tela inicial e inclusão de novos produtos no cardápio. - Atualizado por Rodolpho Rapôso.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
 
         <div id="profile">
-            <img src="./assets/imgs/fornoalenha.png" alt="Logo Forno à Lenha Pizzaria">
+            <img src="./assets/imgs/fornoalenha.webp" alt="Logo Forno à Lenha Pizzaria">
             <h2>Forno à Lenha Pizzaria</h2>
         </div>
 
