--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -16,10 +16,12 @@
   <header class="topbar">
     <div class="brand">
       <div class="logo">
-        <img id="icone" src="../imgs/fornoalenha.webp" alt="Ícone da logo da Forno à Lenha Pizzaria.">
+        <a href="../../index.html">
+          <img id="icone" src="../imgs/fornoalenha.webp" alt="Ícone da logo da Forno à Lenha Pizzaria.">
+        </a>
       </div>
       <div>
-        <h1>Forno a Lenha</h1>
+        <h1>Forno à Lenha</h1>
         <span>Pizzaria</span>
       </div>
     </div>
@@ -75,6 +77,104 @@
         </ul>
       </div>
     </section>
+
+    <!-- SUSHI & DERIVADOS -->
+<section class="secao" id="sushi">
+  <h2>Sushi & Derivados</h2>
+
+  <!-- Combos -->
+  <h3 style="margin:6px 0 10px">Combinados</h3>
+  <div class="cards">
+
+    <div class="card">
+      <h3>Combinado 01 <small>(12 peças)</small></h3>
+      <p>
+        2 Uramakis de Salmão • 2 Hossomaki de Kani • 4 Hot Filadélfia • 4 Hot Camarão
+      </p>
+      <span class="price">R$ 30,90</span>
+      <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 30.90, 1)">Adicionar</button>
+    </div>
+
+    <div class="card">
+      <h3>Combinado 02 <small>(12 peças)</small></h3>
+      <p>
+        4 Hot de Camarão • 4 Hot de Kani • 4 Hot de Filadélfia
+      </p>
+      <span class="price">R$ 34,90</span>
+      <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 34.90, 1)">Adicionar</button>
+    </div>
+
+    <div class="card">
+      <h3>Combinado 03 <small>(14 peças)</small></h3>
+      <p>
+        2 Uramakis de Salmão • 2 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão
+      </p>
+      <span class="price">R$ 36,90</span>
+      <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 36.90, 1)">Adicionar</button>
+    </div>
+
+    <div class="card">
+      <h3>Combinado 04 <small>(19 peças)</small></h3>
+      <p>
+        2 Uramakis de Salmão • 2 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão • 5 Hot de Polvo
+      </p>
+      <span class="price">R$ 46,90</span>
+      <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 46.90, 1)">Adicionar</button>
+    </div>
+
+    <div class="card">
+      <h3>Combinado 05 <small>(26 peças)</small></h3>
+      <p>
+        4 Uramakis de Salmão • 4 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão •
+        2 Niguiris • 2 Sashimis • 2 Dragon • 2 Jyo
+      </p>
+      <span class="price">R$ 63,90</span>
+      <button class="btn btn-add" onclick="addToCart('Combinado 05 (26 peças)', 63.90, 1)">Adicionar</button>
+    </div>
+
+  </div>
+
+  <!-- Temakis -->
+  <h3 style="margin:18px 0 10px">Temakis <small style="color:#8b8d94">(cada)</small></h3>
+  <div class="cards">
+    <div class="card">
+      <h3>Temaki de Salmão</h3>
+      <p>Cones de alga com arroz e salmão.</p>
+      <span class="price">R$ 36,90</span>
+      <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 36.90, 1)">Adicionar</button>
+    </div>
+    <div class="card">
+      <h3>Temaki de Salmão Grelhado</h3>
+      <p>Salmão grelhado no cone de alga com arroz.</p>
+      <span class="price">R$ 36,90</span>
+      <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 36.90, 1)">Adicionar</button>
+    </div>
+    <div class="card">
+      <h3>Temaki de Polvo</h3>
+      <p>Polvo selecionado, arroz e alga.</p>
+      <span class="price">R$ 36,90</span>
+      <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 36.90, 1)">Adicionar</button>
+    </div>
+    <div class="card">
+      <h3>Temaki de Camarão</h3>
+      <p>Camarão, arroz e alga crocante.</p>
+      <span class="price">R$ 36,90</span>
+      <button class="btn btn-add" onclick="addToCart('Temaki de Camarão', 36.90, 1)">Adicionar</button>
+    </div>
+  </div>
+
+  <!-- Sushidog -->
+  <h3 style="margin:18px 0 10px">Sushidog</h3>
+  <div class="cards">
+    <div class="card">
+      <h3>Sushidog</h3>
+      <p>Clássico da casa.</p>
+      <span class="price">R$ 37,90</span>
+      <button class="btn btn-add" onclick="addToCart('Sushidog', 37.90, 1)">Adicionar</button>
+    </div>
+  </div>
+</section>
+
 
     <!-- BEBIDAS -->
     <section class="secao" id="bebidas">
