--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="topbar">
+  <header class="topbar glass" id="site-header">
     <div class="brand">
       <div class="logo">
         <a href="../../index.html">
@@ -26,159 +26,172 @@
       </div>
     </div>
 
-    <div class="cart-trigger" id="open-cart">
-      🛒 <span id="cart-count">0</span>
-    </div>
+    <nav class="main-nav" aria-label="Navegação principal">
+      <a class="nav-link" href="#home"   data-target="home"   title="Home">🏠 <span>Home</span></a>
+      <a class="nav-link" href="#pizzas" data-target="pizzas" title="Pizzas">🍕 <span>Pizzas</span></a>
+      <a class="nav-link" href="#sushi"  data-target="sushi"  title="Sushis">🍣 <span>Sushis</span></a>
+      <a class="nav-link" href="#bebidas"data-target="bebidas"title="Bebidas">🥤 <span>Bebidas</span></a>
+    </nav>
+
+    <button class="cart-trigger" id="open-cart" aria-label="Abrir carrinho">
+      🛒 <span id="cart-count" style="color: #fff;">0</span>
+    </button>
   </header>
 
   <main class="container">
     <!-- HERO -->
-    <section class="hero">
+    <section class="hero" id="home">
       <div class="hero-text">
         <h2>Cardápio</h2>
-        <p>Monte sua pizza ou escolha uma bebida. Carrinho mantém tudo salvo enquanto você navega 😉</p>
+        <p>Monte sua pizza, escolha bebidas e agora também nossos sushis. O carrinho mantém tudo salvo 😉</p>
         <button class="btn btn-primary" id="btn-monte-pizza">🍕 Monte sua pizza</button>
       </div>
       <div class="hero-art" aria-hidden="true">🍕</div>
     </section>
 
-    <!-- PIZZAS INFO -->
-    <section class="tabelas">
-      <div class="tabela">
-        <h3>Pizzas Tradicionais</h3>
-        <ul>
-          <li>Brotinho: <strong>R$ 19,90</strong></li>
-          <li>Média: <strong>R$ 36,90</strong></li>
-          <li>Grande: <strong>R$ 46,90</strong></li>
-        </ul>
-      </div>
-      <div class="tabela">
-        <h3>Pizzas Especiais</h3>
-        <ul>
-          <li>Brotinho: <strong>R$ 29,90</strong></li>
-          <li>Média: <strong>R$ 48,90</strong></li>
-          <li>Grande: <strong>R$ 58,90</strong></li>
-        </ul>
-      </div>
-      <div class="tabela">
-        <h3>Pizzas Doces</h3>
-        <ul>
-          <li>Média: <strong>R$ 38,90</strong></li>
-          <li>Grande: <strong>R$ 48,90</strong></li>
-          <li class="muted">Brotinho: —</li>
-        </ul>
-      </div>
-      <div class="tabela">
-        <h3>Borda Recheada</h3>
-        <ul>
-          <li>Média: <strong>R$ 11,90</strong></li>
-          <li>Grande: <strong>R$ 14,90</strong></li>
-          <li class="muted">Brotinho: —</li>
-        </ul>
-      </div>
+    <!-- PIZZAS -->
+    <section id="pizzas">
+      <section class="tabelas">
+        <div class="tabela">
+          <h3>Pizzas Tradicionais</h3>
+          <ul>
+            <li>Brotinho: <strong>R$ 19,90</strong></li>
+            <li>Média: <strong>R$ 36,90</strong></li>
+            <li>Grande: <strong>R$ 46,90</strong></li>
+          </ul>
+        </div>
+        <div class="tabela">
+          <h3>Pizzas Especiais</h3>
+          <ul>
+            <li>Brotinho: <strong>R$ 29,90</strong></li>
+            <li>Média: <strong>R$ 48,90</strong></li>
+            <li>Grande: <strong>R$ 58,90</strong></li>
+          </ul>
+        </div>
+        <div class="tabela">
+          <h3>Pizzas Doces</h3>
+          <ul>
+            <li>Média: <strong>R$ 38,90</strong></li>
+            <li>Grande: <strong>R$ 48,90</strong></li>
+            <li class="muted">Brotinho: —</li>
+          </ul>
+        </div>
+        <div class="tabela">
+          <h3>Borda Recheada</h3>
+          <ul>
+            <li>Média: <strong>R$ 11,90</strong></li>
+            <li>Grande: <strong>R$ 14,90</strong></li>
+            <li class="muted">Brotinho: —</li>
+          </ul>
+        </div>
+      </section>
     </section>
 
     <!-- SUSHI & DERIVADOS -->
-<section class="secao" id="sushi">
-  <h2>Sushi & Derivados</h2>
+    <section class="secao" id="sushi">
+      <h2>Sushi & Derivados</h2>
 
-  <!-- Combos -->
-  <h3 style="margin:6px 0 10px">Combinados</h3>
-  <div class="cards">
+      <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
+      <div class="cards">
+        <div class="card">
+          <h3>Combinado 01 <small>(12 peças)</small></h3>
+          <ul>
+            <li>4 Hot de Filadélfia</li>
+            <li>4 Hot de Camarão</li>
+            <li>4 Hot de Polvo</li>
+          </ul>
+          <span class="price">R$ 30,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 30.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Combinado 02 <small>(12 peças)</small></h3>
+          <ul>
+            <li>4 Hot de Camarão</li>
+            <li>4 Hot de Kani</li>
+            <li>4 Hot de Filadélfia</li>
+        </ul>
+          <span class="price">R$ 34,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 34.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Combinado 03 <small>(14 peças)</small></h3>
+          <ul>
+            <li>2 Uramakis de Salmão</li>
+            <li>2 Hossomaki de Kani</li>
+            <li>5 Hot Filadélfia</li>
+            <li>5 Hot Camarão</li>
+          </ul>
+          <span class="price">R$ 36,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 36.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Combinado 04 <small>(19 peças)</small></h3>
+          <ul>
+            <li>2 Uramakis de Salmão</li>
+            <li>2 Hossomaki de Kani</li>
+            <li>5 Hot Filadélfia</li>
+            <li>5 Hot Camarão</li>
+            <li>5 Hot de Polvo</li>
+          </ul>
+          <span class="price">R$ 46,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 46.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Combinado 05 <small>(26 peças)</small></h3>
+          <ul>
+            <li>4 Uramakis de Salmão</li>
+            <li>4 Hossomaki de Kani</li>
+            <li>6 Hot Filadélfia</li>
+            <li>6 Hot Camarão</li>
+            <li>6 Hot de Polvo</li>
+          </ul>
+          <span class="price">R$ 63,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 05 (26 peças)', 63.90, 1)">Adicionar</button>
+        </div>
+      </div>
 
-    <div class="card">
-      <h3>Combinado 01 <small>(12 peças)</small></h3>
-      <p>
-        2 Uramakis de Salmão • 2 Hossomaki de Kani • 4 Hot Filadélfia • 4 Hot Camarão
-      </p>
-      <span class="price">R$ 30,90</span>
-      <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 30.90, 1)">Adicionar</button>
-    </div>
+      <h3 style="margin:18px 0 10px">🍣 Temakis <small style="color:#8b8d94">(cada)</small></h3>
+      <div class="cards">
+        <div class="card">
+          <h3>Temaki de Salmão</h3>
+          <p>Cones de alga com arroz e salmão.</p>
+          <span class="price">R$ 36,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 36.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Temaki de Salmão Grelhado</h3>
+          <p>Salmão grelhado no cone de alga com arroz.</p>
+          <span class="price">R$ 36,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 36.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Temaki de Polvo</h3>
+          <p>Polvo selecionado, arroz e alga.</p>
+          <span class="price">R$ 36,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 36.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <h3>Temaki de Camarão</h3>
+          <p>Camarão, arroz e alga crocante.</p>
+          <span class="price">R$ 36,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Camarão', 36.90, 1)">Adicionar</button>
+        </div>
+      </div>
 
-    <div class="card">
-      <h3>Combinado 02 <small>(12 peças)</small></h3>
-      <p>
-        4 Hot de Camarão • 4 Hot de Kani • 4 Hot de Filadélfia
-      </p>
-      <span class="price">R$ 34,90</span>
-      <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 34.90, 1)">Adicionar</button>
-    </div>
-
-    <div class="card">
-      <h3>Combinado 03 <small>(14 peças)</small></h3>
-      <p>
-        2 Uramakis de Salmão • 2 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão
-      </p>
-      <span class="price">R$ 36,90</span>
-      <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 36.90, 1)">Adicionar</button>
-    </div>
-
-    <div class="card">
-      <h3>Combinado 04 <small>(19 peças)</small></h3>
-      <p>
-        2 Uramakis de Salmão • 2 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão • 5 Hot de Polvo
-      </p>
-      <span class="price">R$ 46,90</span>
-      <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 46.90, 1)">Adicionar</button>
-    </div>
-
-    <div class="card">
-      <h3>Combinado 05 <small>(26 peças)</small></h3>
-      <p>
-        4 Uramakis de Salmão • 4 Hossomaki de Kani • 5 Hot Filadélfia • 5 Hot Camarão •
-        2 Niguiris • 2 Sashimis • 2 Dragon • 2 Jyo
-      </p>
-      <span class="price">R$ 63,90</span>
-      <button class="btn btn-add" onclick="addToCart('Combinado 05 (26 peças)', 63.90, 1)">Adicionar</button>
-    </div>
-
-  </div>
-
-  <!-- Temakis -->
-  <h3 style="margin:18px 0 10px">Temakis <small style="color:#8b8d94">(cada)</small></h3>
-  <div class="cards">
-    <div class="card">
-      <h3>Temaki de Salmão</h3>
-      <p>Cones de alga com arroz e salmão.</p>
-      <span class="price">R$ 36,90</span>
-      <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 36.90, 1)">Adicionar</button>
-    </div>
-    <div class="card">
-      <h3>Temaki de Salmão Grelhado</h3>
-      <p>Salmão grelhado no cone de alga com arroz.</p>
-      <span class="price">R$ 36,90</span>
-      <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 36.90, 1)">Adicionar</button>
-    </div>
-    <div class="card">
-      <h3>Temaki de Polvo</h3>
-      <p>Polvo selecionado, arroz e alga.</p>
-      <span class="price">R$ 36,90</span>
-      <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 36.90, 1)">Adicionar</button>
-    </div>
-    <div class="card">
-      <h3>Temaki de Camarão</h3>
-      <p>Camarão, arroz e alga crocante.</p>
-      <span class="price">R$ 36,90</span>
-      <button class="btn btn-add" onclick="addToCart('Temaki de Camarão', 36.90, 1)">Adicionar</button>
-    </div>
-  </div>
-
-  <!-- Sushidog -->
-  <h3 style="margin:18px 0 10px">Sushidog</h3>
-  <div class="cards">
-    <div class="card">
-      <h3>Sushidog</h3>
-      <p>Clássico da casa.</p>
-      <span class="price">R$ 37,90</span>
-      <button class="btn btn-add" onclick="addToCart('Sushidog', 37.90, 1)">Adicionar</button>
-    </div>
-  </div>
-</section>
-
+      <h3 style="margin:18px 0 10px">🍣 Sushidog</h3>
+      <div class="cards">
+        <div class="card">
+          <h3>Sushidog</h3>
+          <p>Clássico da casa.</p>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Sushidog', 37.90, 1)">Adicionar</button>
+        </div>
+      </div>
+    </section>
 
     <!-- BEBIDAS -->
     <section class="secao" id="bebidas">
-      <h2>Refrigerantes</h2>
+      <h2>🥤 Refrigerantes</h2>
       <div class="cards" id="cards-bebidas">
         <div class="card">
           <h3>Coca-Cola 1L</h3>
@@ -202,12 +215,15 @@
     </section>
   </main>
 
+  
+
   <!-- CARRINHO (drawer) -->
   <aside class="cart" id="cart">
     <div class="cart-header">
       <h3>Seu Carrinho</h3>
       <button class="icon-btn" id="close-cart" title="Fechar">✖</button>
     </div>
+
     <div id="cart-items" class="cart-items"></div>
 
     <!-- ENTREGA / DADOS DO CLIENTE -->
@@ -273,6 +289,8 @@
       <div class="linha total">
         <span>Total</span><strong id="cart-total">R$ 0,00</strong>
       </div>
+
+      <button class="btn" id="btn-continuar" type="button">← Continuar comprando</button>
       <button class="btn btn-primary" id="btn-finalizar">Finalizar pelo WhatsApp</button>
       <p class="pix-tip">💳 Aceitamos Pix.</p>
     </div>
