Atualização da tela inicial. - Atualizado por Rodolpho Rapôso.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
         <div id="profile">
             <img src="./assets/imgs/fornoalenha.webp" alt="Logo Forno à Lenha Pizzaria">
-            <h2>Forno à Lenha Pizzaria</h2>
         </div>
 
         <nav>
@@ -53,7 +52,7 @@
                 Horário de Funcionamento
             </h2>
             <p>Terça a Domingo: 18:30 às 23:00</p>
-            <p>Domingos: Fechado</p>
+            <p>Segunda: Fechado</p>
         </section>
 
         <footer>
