--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -29,7 +29,7 @@
     <nav class="main-nav" aria-label="Navegação principal">
       <a class="nav-link" href="#pizzas" data-target="pizzas" title="Pizzas">🍕<span>Pizzas</span></a>
       <a class="nav-link" href="#sushi"  data-target="sushi"  title="Sushis">🍣<span>Sushis</span></a>
-      <a class="nav-link" href="#esfirra"  data-target="esfirras"  title="Esfirras">🥟<span>Esfirras</span></a>
+      <a class="nav-link" href="#esfiha"  data-target="esfiha"  title="esfiha">🥟<span>Esfihas</span></a>
       <a class="nav-link" href="#bebidas"data-target="bebidas"title="Bebidas">🥤<span>Bebidas</span></a>
     </nav>
 
@@ -43,6 +43,7 @@
     <section id="pizzas">
       <h1>🍕 Pizzas</h1>
       <section class="tabelas">
+        <button class="btn btn-primary" id="btn-monte-pizza">🍕 Monte sua pizza</button>
         <div class="tabela">
           <h3>Pizzas Tradicionais</h3>
           <ul>
@@ -75,7 +76,6 @@
             <li class="muted">Brotinho: —</li>
           </ul>
         </div>
-        <button class="btn btn-primary" id="btn-monte-pizza">🍕 Monte sua pizza</button>
       </section>
     </section>
 
@@ -85,6 +85,7 @@
       <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
       <div class="cards">
         <div class="card">
+          <img class="card-img" src="../imgs/combinado1.webp" alt="Produto" loading="lazy">
           <h3>Combinado 01 <small>(12 peças)</small></h3>
           <ul>
             <li>4 Hot de Filadélfia</li>
@@ -95,6 +96,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 30.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/combinado2.webp" alt="Produto" loading="lazy">
           <h3>Combinado 02 <small>(12 peças)</small></h3>
           <ul>
             <li>4 Hot de Camarão</li>
@@ -105,6 +107,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 34.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/combinado3.webp" alt="Produto" loading="lazy">
           <h3>Combinado 03 <small>(14 peças)</small></h3>
           <ul>
             <li>2 Uramakis de Salmão</li>
@@ -116,6 +119,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 36.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/combinado4.webp" alt="Produto" loading="lazy">
           <h3>Combinado 04 <small>(19 peças)</small></h3>
           <ul>
             <li>2 Uramakis de Salmão</li>
@@ -128,6 +132,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 46.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/combinado5.webp" alt="Produto" loading="lazy">
           <h3>Combinado 05 <small>(26 peças)</small></h3>
           <ul>
             <li>4 Uramakis de Salmão</li>
@@ -144,24 +149,28 @@
       <h2 style="margin:18px 0 10px">🍙 Temakis <small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
+          <img class="card-img" src="../imgs/tsalmao.webp" alt="Produto" loading="lazy">
           <h3>Salmão</h3>
           <p>Cones de alga com arroz e salmão.</p>
           <span class="price">R$ 36,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 36.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/tsalmaogrelhado.webp" alt="Produto" loading="lazy">
           <h3>Salmão Grelhado</h3>
           <p>Salmão grelhado no cone de alga com arroz.</p>
           <span class="price">R$ 36,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 36.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/tpolvo.webp" alt="Produto" loading="lazy">
           <h3>Polvo</h3>
           <p>Polvo selecionado, arroz e alga.</p>
           <span class="price">R$ 36,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 36.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/tcamarao.webp" alt="Produto" loading="lazy">
           <h3>Camarão</h3>
           <p>Camarão, arroz e alga crocante.</p>
           <span class="price">R$ 36,90</span>
@@ -172,6 +181,7 @@
       <h2 style="margin:18px 0 10px">🌮 Sushidog</h2>
       <div class="cards">
         <div class="card">
+          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 37,90</span>
@@ -180,35 +190,41 @@
       </div>
     </section>
     
-    <section class="secao" id="esfirra">
+    <section class="secao" id="esfiha">
       <h2 style="margin:18px 0 10px">Tradicionais <small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
+          <img class="card-img" src="../imgs/esfirrami.webp" alt="Produto" loading="lazy">
           <h3>Mista</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Mista', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirrafr.webp" alt="Produto" loading="lazy">
           <h3>Frango</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Frango', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirramu.webp" alt="Produto" loading="lazy">
           <h3>Mussarela</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Mussarela', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirracn.webp" alt="Produto" loading="lazy">
           <h3>Carne Moída</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne Moída', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirracb.webp" alt="Produto" loading="lazy">
           <h3>Calabresa</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Calabresa', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirramg.webp" alt="Produto" loading="lazy">
           <h3>Marguerita</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Marguerita', 3.90, 1)">Adicionar</button>
@@ -219,21 +235,25 @@
       <h2 style="margin:18px 0 10px">Especiais<small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
+          <img class="card-img" src="../imgs/esfirracm.webp" alt="Produto" loading="lazy">
           <h3>Camarão</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Camarão', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirracs.webp" alt="Produto" loading="lazy">
           <h3>Carne de Sol</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne de Sol', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirrafc.webp" alt="Produto" loading="lazy">
           <h3>Frango com Catupiry</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Frango com Catupiry', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/esfirraqq.webp" alt="Produto" loading="lazy">
           <h3>Quatro Queijos</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Quatro Queijos', 4.90, 1)">Adicionar</button>
@@ -245,18 +265,21 @@
       <h1>🥤 Refrigerantes</h1>
       <div class="cards" id="cards-bebidas">
         <div class="card">
+          <img class="card-img" src="../imgs/coca1l.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola 1L</h3>
           <p>Refrigerante Coca-Cola 1 Litro.</p>
           <span class="price">R$ 8,90</span>
           <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 8.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/guarana1l.webp" alt="Produto" loading="lazy">
           <h3>Guaraná 1L</h3>
           <p>Refrigerante Guaraná 1 Litro.</p>
           <span class="price">R$ 6,90</span>
           <button class="btn btn-add" onclick="addToCart('Guaraná 1L', 6.90, 1)">Adicionar</button>
         </div>
         <div class="card">
+          <img class="card-img" src="../imgs/pepsi1l.webp" alt="Produto" loading="lazy">
           <h3>Pepsi 1L</h3>
           <p>Refrigerante Pepsi 1 Litro.</p>
           <span class="price">R$ 6,90</span>
@@ -419,8 +442,8 @@
     </div>
   </div>
 
-  <footer class="rodape">
-    <p>Forno a Lenha Pizzaria — entregue quentinha na sua casa.</p>
+  <footer>
+    <small>&copy; 2025 - <a href="https://portfolioraposoofc.vercel.app" style="text-decoration: none; color: #fff;">Rapôso Web Dev</a> | Todos os direitos reservados.</small>
   </footer>
 
   <script src="../js/script.js"></script>
