Atualização dos componentes do 'cardápio.html' e 'script.js'. - Atualizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -365,16 +365,10 @@
         </select>
       </div>
 
-      <div id="dinheiro-fields">
+      <div class="section-box" id="observacao-box">
+        <h3>📝 Observações</h3>
         <div class="field">
-          <label>
-            <input type="checkbox" id="precisa-troco"> Precisa de troco?
-          </label>
-        </div>
-        <div class="field">
-          <label for="troco-para">Troco para quanto?</label>
-          <input type="text" id="troco-para" placeholder="Ex: 50,00" />
-          <small class="hint">O valor deve ser superior ao total do pedido.</small>
+          <textarea id="observacao" placeholder="Ex: Sem cebola, pimenta à parte, atenção ao interfone, etc." rows="3"></textarea>
         </div>
       </div>
       
