--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -262,30 +262,44 @@
         </div>
       </div>
     </section>
-
+    
     <section class="secao" id="bebidas">
       <h1>🥤 Refrigerantes</h1>
       <div class="cards" id="cards-bebidas">
+      <div class="card">
+        <img class="card-img" src="../imgs/cocalt.webp" alt="Produto" loading="lazy">
+        <h3>Coca-Cola 350ml</h3>
+        <p>Coca-Cola 350ml.</p>
+        <span class="price">R$ 5,90</span>
+        <button class="btn btn-add" onclick="addToCart('Pepsi 1L', 6.90, 1)">Adicionar</button>
+      </div>
+      <div class="card">
+        <img class="card-img" src="../imgs/cocaltzr.webp" alt="Produto" loading="lazy">
+        <h3>Coca-Cola Zero 350ml</h3>
+        <p>Coca-Cola Zero 350ml.</p>
+        <span class="price">R$ 5,90</span>
+        <button class="btn btn-add" onclick="addToCart('Pepsi 1L', 6.90, 1)">Adicionar</button>
+      </div>
         <div class="card">
           <img class="card-img" src="../imgs/coca1l.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola 1L</h3>
-          <p>Refrigerante Coca-Cola 1 Litro.</p>
+          <p>Coca-Cola 1L.</p>
+          <span class="price">R$ 8,90</span>
+          <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 8.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/coca1lzr.webp" alt="Produto" loading="lazy">
+          <h3>Coca-Cola Zero 1L</h3>
+          <p>Coca-Cola Zero 1L.</p>
           <span class="price">R$ 8,90</span>
           <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 8.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/guarana1l.webp" alt="Produto" loading="lazy">
           <h3>Guaraná 1L</h3>
-          <p>Refrigerante Guaraná 1 Litro.</p>
-          <span class="price">R$ 6,90</span>
+          <p>Guaraná 1L.</p>
+          <span class="price">R$ 8,90</span>
           <button class="btn btn-add" onclick="addToCart('Guaraná 1L', 6.90, 1)">Adicionar</button>
-        </div>
-        <div class="card">
-          <img class="card-img" src="../imgs/pepsi1l.webp" alt="Produto" loading="lazy">
-          <h3>Pepsi 1L</h3>
-          <p>Refrigerante Pepsi 1 Litro.</p>
-          <span class="price">R$ 6,90</span>
-          <button class="btn btn-add" onclick="addToCart('Pepsi 1L', 6.90, 1)">Adicionar</button>
         </div>
       </div>
     </section>
