Atualização dos itens de refrigerantes do cardápio. - Atualizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -271,14 +271,14 @@
         <h3>Coca-Cola 350ml</h3>
         <p>Coca-Cola 350ml.</p>
         <span class="price">R$ 5,90</span>
-        <button class="btn btn-add" onclick="addToCart('Pepsi 1L', 6.90, 1)">Adicionar</button>
+        <button class="btn btn-add" onclick="addToCart('Coca-Cola 350ml', 6.90, 1)">Adicionar</button>
       </div>
       <div class="card">
         <img class="card-img" src="../imgs/cocaltzr.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola Zero 350ml</h3>
         <p>Coca-Cola Zero 350ml.</p>
         <span class="price">R$ 5,90</span>
-        <button class="btn btn-add" onclick="addToCart('Pepsi 1L', 6.90, 1)">Adicionar</button>
+        <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 350ml', 6.90, 1)">Adicionar</button>
       </div>
         <div class="card">
           <img class="card-img" src="../imgs/coca1l.webp" alt="Produto" loading="lazy">
@@ -292,7 +292,7 @@
           <h3>Coca-Cola Zero 1L</h3>
           <p>Coca-Cola Zero 1L.</p>
           <span class="price">R$ 8,90</span>
-          <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 8.90, 1)">Adicionar</button>
+          <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 1L', 8.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/guarana1l.webp" alt="Produto" loading="lazy">
