Atualização dos preços, dos itens do cardápio e da apresentação da comanda ao ser enviada via Whatsapp. - Atualizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -48,32 +48,32 @@
         <div class="tabela">
           <h3>Pizzas Tradicionais</h3>
           <ul>
-            <li>Brotinho: <strong>R$ 19,90</strong></li>
-            <li>Média: <strong>R$ 36,90</strong></li>
-            <li>Grande: <strong>R$ 46,90</strong></li>
+            <li>Brotinho: <strong>R$ 20,90</strong></li>
+            <li>Média: <strong>R$ 37,90</strong></li>
+            <li>Grande: <strong>R$ 47,90</strong></li>
           </ul>
         </div>
         <div class="tabela">
           <h3>Pizzas Especiais</h3>
           <ul>
-            <li>Brotinho: <strong>R$ 29,90</strong></li>
-            <li>Média: <strong>R$ 48,90</strong></li>
-            <li>Grande: <strong>R$ 58,90</strong></li>
+            <li>Brotinho: <strong>R$ 30,90</strong></li>
+            <li>Média: <strong>R$ 49,90</strong></li>
+            <li>Grande: <strong>R$ 59,90</strong></li>
           </ul>
         </div>
         <div class="tabela">
           <h3>Pizzas Doces</h3>
           <ul>
-            <li>Média: <strong>R$ 38,90</strong></li>
-            <li>Grande: <strong>R$ 48,90</strong></li>
-            <li class="muted">Brotinho: —</li>
+            <li>Brotinho: <strong>R$ 25,90</strong></li>
+            <li>Média: <strong>R$ 39,90</strong></li>
+            <li>Grande: <strong>R$ 49,90</strong></li>
           </ul>
         </div>
         <div class="tabela">
           <h3>Borda Recheada</h3>
           <ul>
-            <li>Média: <strong>R$ 11,90</strong></li>
-            <li>Grande: <strong>R$ 14,90</strong></li>
+            <li>Média: <strong>R$ 12,90</strong></li>
+            <li>Grande: <strong>R$ 15,90</strong></li>
             <li class="muted">Brotinho: —</li>
           </ul>
         </div>
@@ -91,10 +91,11 @@
           <ul>
             <li>4 Hot de Filadélfia</li>
             <li>4 Hot de Camarão</li>
-            <li>4 Hot de Polvo</li>
+            <li>2 Uramakis de Salmão</li>
+            <li>2 Hossomaki de Kani</li>
           </ul>
-          <span class="price">R$ 30,90</span>
-          <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 30.90, 1)">Adicionar</button>
+          <span class="price">R$ 31,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 31.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/combinado2.webp" alt="Produto" loading="lazy">
@@ -104,8 +105,8 @@
             <li>4 Hot de Kani</li>
             <li>4 Hot de Filadélfia</li>
         </ul>
-          <span class="price">R$ 34,90</span>
-          <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 34.90, 1)">Adicionar</button>
+          <span class="price">R$ 35,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 35.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/combinado3.webp" alt="Produto" loading="lazy">
@@ -116,8 +117,8 @@
             <li>5 Hot Filadélfia</li>
             <li>5 Hot Camarão</li>
           </ul>
-          <span class="price">R$ 36,90</span>
-          <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 36.90, 1)">Adicionar</button>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/combinado4.webp" alt="Produto" loading="lazy">
@@ -127,10 +128,10 @@
             <li>2 Hossomaki de Kani</li>
             <li>5 Hot Filadélfia</li>
             <li>5 Hot Camarão</li>
-            <li>5 Hot de Polvo</li>
+            <li>5 Hot de Polvo ou 5 Hot de Kani</li>
           </ul>
-          <span class="price">R$ 46,90</span>
-          <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 46.90, 1)">Adicionar</button>
+          <span class="price">R$ 47,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 47.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/combinado5.webp" alt="Produto" loading="lazy">
@@ -138,12 +139,15 @@
           <ul>
             <li>4 Uramakis de Salmão</li>
             <li>4 Hossomaki de Kani</li>
-            <li>6 Hot Filadélfia</li>
-            <li>6 Hot Camarão</li>
-            <li>6 Hot de Polvo</li>
+            <li>5 Hot Filadélfia</li>
+            <li>5 Hot Camarão</li>
+            <li>2 Niguiri</li>
+            <li>2 Sashimi</li>
+            <li>2 Dragon</li>
+            <li>2 Jyo</li>
           </ul>
-          <span class="price">R$ 63,90</span>
-          <button class="btn btn-add" onclick="addToCart('Combinado 05 (26 peças)', 63.90, 1)">Adicionar</button>
+          <span class="price">R$ 64,90</span>
+          <button class="btn btn-add" onclick="addToCart('Combinado 05 (26 peças)', 64.90, 1)">Adicionar</button>
         </div>
       </div>
 
@@ -153,29 +157,29 @@
           <img class="card-img" src="../imgs/tsalmao.webp" alt="Produto" loading="lazy">
           <h3>Salmão</h3>
           <p>Cones de alga com arroz e salmão.</p>
-          <span class="price">R$ 36,90</span>
-          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 36.90, 1)">Adicionar</button>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/tsalmaogrelhado.webp" alt="Produto" loading="lazy">
           <h3>Salmão Grelhado</h3>
           <p>Salmão grelhado no cone de alga com arroz.</p>
-          <span class="price">R$ 36,90</span>
-          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 36.90, 1)">Adicionar</button>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/tpolvo.webp" alt="Produto" loading="lazy">
           <h3>Polvo</h3>
-          <p>Polvo selecionado, arroz e alga.</p>
-          <span class="price">R$ 36,90</span>
-          <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 36.90, 1)">Adicionar</button>
+          <p>Polvo selecionado com arroz no cone de alga.</p>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/tcamarao.webp" alt="Produto" loading="lazy">
           <h3>Camarão</h3>
-          <p>Camarão, arroz e alga crocante.</p>
-          <span class="price">R$ 36,90</span>
-          <button class="btn btn-add" onclick="addToCart('Temaki de Camarão', 36.90, 1)">Adicionar</button>
+          <p>Camarão com arroz no cone de alga crocante.</p>
+          <span class="price">R$ 37,90</span>
+          <button class="btn btn-add" onclick="addToCart('Temaki de Camarão', 37.90, 1)">Adicionar</button>
         </div>
       </div>
 
@@ -183,10 +187,31 @@
       <div class="cards">
         <div class="card">
           <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
-          <h3>Sushidog</h3>
+          <h3>Sushidog de Salmão</h3>
           <p>Clássico da casa.</p>
-          <span class="price">R$ 37,90</span>
-          <button class="btn btn-add" onclick="addToCart('Sushidog', 37.90, 1)">Adicionar</button>
+          <span class="price">R$ 38,90</span>
+          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <h3>Sushidog de Salmão Grelhado</h3>
+          <p>Clássico da casa.</p>
+          <span class="price">R$ 38,90</span>
+          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <h3>Sushidog de Camarão</h3>
+          <p>Clássico da casa.</p>
+          <span class="price">R$ 38,90</span>
+          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <h3>Sushidog de Polvo</h3>
+          <p>Clássico da casa.</p>
+          <span class="price">R$ 38,90</span>
+          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
         </div>
       </div>
     </section>
@@ -261,6 +286,34 @@
           <button class="btn btn-add" onclick="addToCart('Esfiha Quatro Queijos', 4.90, 1)">Adicionar</button>
         </div>
       </div>
+
+      <h2 style="margin:18px 0 10px">Doces<small style="color:#8b8d94"></small></h2>
+      <div class="cards">
+        <div class="card">
+          <img class="card-img" src="../imgs/esfihabr.webp" alt="Produto" loading="lazy">
+          <h3>Brigadeiro</h3>
+          <span class="price">R$ 4,90</span>
+          <button class="btn btn-add" onclick="addToCart('Esfiha de Brigadeiro', 4.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/esfihabn.webp" alt="Produto" loading="lazy">
+          <h3>Banana</h3>
+          <span class="price">R$ 4,90</span>
+          <button class="btn btn-add" onclick="addToCart('Esfiha de Banana', 4.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/esfihamm.webp" alt="Produto" loading="lazy">
+          <h3>M & M</h3>
+          <span class="price">R$ 4,90</span>
+          <button class="btn btn-add" onclick="addToCart('Esfiha M & M', 4.90, 1)">Adicionar</button>
+        </div>
+        <div class="card">
+          <img class="card-img" src="../imgs/esfiharj.webp" alt="Produto" loading="lazy">
+          <h3>Romeu & Julieta</h3>
+          <span class="price">R$ 4,90</span>
+          <button class="btn btn-add" onclick="addToCart('Esfiha Romeu & Julieta', 4.90, 1)">Adicionar</button>
+        </div>
+      </div>
     </section>
     
     <section class="secao" id="bebidas">
@@ -270,36 +323,36 @@
         <img class="card-img" src="../imgs/cocalt.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola 350ml</h3>
         <p>Coca-Cola 350ml.</p>
-        <span class="price">R$ 5,90</span>
-        <button class="btn btn-add" onclick="addToCart('Coca-Cola 350ml', 6.90, 1)">Adicionar</button>
+        <span class="price">R$ 6,90</span>
+        <button class="btn btn-add" onclick="addToCart('Coca-Cola 350ml', 7.90, 1)">Adicionar</button>
       </div>
       <div class="card">
         <img class="card-img" src="../imgs/cocaltzr.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola Zero 350ml</h3>
         <p>Coca-Cola Zero 350ml.</p>
-        <span class="price">R$ 5,90</span>
-        <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 350ml', 6.90, 1)">Adicionar</button>
+        <span class="price">R$ 6,90</span>
+        <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 350ml', 7.90, 1)">Adicionar</button>
       </div>
         <div class="card">
           <img class="card-img" src="../imgs/coca1l.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola 1L</h3>
           <p>Coca-Cola 1L.</p>
-          <span class="price">R$ 8,90</span>
-          <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 8.90, 1)">Adicionar</button>
+          <span class="price">R$ 9,90</span>
+          <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 9.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/coca1lzr.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola Zero 1L</h3>
           <p>Coca-Cola Zero 1L.</p>
-          <span class="price">R$ 8,90</span>
-          <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 1L', 8.90, 1)">Adicionar</button>
+          <span class="price">R$ 9,90</span>
+          <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 1L', 9.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/guarana1l.webp" alt="Produto" loading="lazy">
           <h3>Guaraná 1L</h3>
           <p>Guaraná 1L.</p>
-          <span class="price">R$ 8,90</span>
-          <button class="btn btn-add" onclick="addToCart('Guaraná 1L', 6.90, 1)">Adicionar</button>
+          <span class="price">R$ 9,90</span>
+          <button class="btn btn-add" onclick="addToCart('Guaraná 1L', 9.90, 1)">Adicionar</button>
         </div>
       </div>
     </section>
@@ -377,7 +430,7 @@
         </select>
       </div>
 
-      <!-- Observações com visual padronizado -->
+      <!-- Observações -->
       <div class="section-box" id="observacao-box">
         <h3>📝 Observações</h3>
         <div class="field">
@@ -387,7 +440,7 @@
         </div>
       </div>
       
-      <!-- Campos PIX nativos do carrinho (aparecem quando a opção PIX é selecionada) -->
+      <!-- Campos PIX -->
       <div id="pix-fields" class="hidden">
         <h4 style="margin: 0 0 8px 0; color: var(--acc);">💳 Pagamento via PIX</h4>
         <div class="field">
@@ -418,7 +471,7 @@
     </div>
   </aside>
 
-  <!-- Modal PIX (novo): substitui o confirm() e mostra a chave com botão de copiar -->
+  <!-- Modal PIX -->
   <div id="pix-alert" class="modal" aria-hidden="true">
     <div class="modal-content small">
       <div class="modal-header">
@@ -459,7 +512,7 @@
         <fieldset>
           <legend>Sabores (até 2)</legend>
           <div id="sabor-options"></div>
-          <small class="hint">Pode escolher até 2 sabores (meio a meio). O valor considera o maior preço entre as famílias selecionadas.</small>
+          <small class="hint" id="hint-sabores">Pode escolher até 2 sabores (meio a meio). Para <b>Brotinho</b>, apenas <b>1 sabor</b> e <b>sem borda</b>.</small>
         </fieldset>
 
         <fieldset>
