Atualização da montagem de pizza, ao selecionar o tamanho 'Brotinho' o usuário só conseguirá selecionar um sabor apenas. - Atualizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -512,7 +512,7 @@
         <fieldset>
           <legend>Sabores (até 2)</legend>
           <div id="sabor-options"></div>
-          <small class="hint" id="hint-sabores">Pode escolher até 2 sabores (meio a meio). Para <b>Brotinho</b>, apenas <b>1 sabor</b> e <b>sem borda</b>.</small>
+          <small class="hint" id="hint-sabores" aria-live="polite">Pode escolher até 2 sabores (meio a meio). Para <b>Brotinho</b>, apenas <b>1 sabor</b> e <b>sem borda</b>.</small>
         </fieldset>
 
         <fieldset>
